2007-03-18  Inge Wallin  <inge@lysator.liu.se>

	More Q3Support -> Qt4 conversions.
	* dialogs/KCConfigLegendPage.cc (KCConfigLegendPage): Fix layout
	and port to Qt4. This file produces no warnings now and uses no
	q3support classes.

	More Q3Support -> Qt4 conversions.
	* dialogs/KCConfigColorPage.cc (KCConfigColorPage): Fix layout and
	port to Qt4. This file produces no warnings now.

	More Q3Support -> Qt4 conversions.
	* dialogs/KCConfigAxesPage.cc (KCConfigAxesPage): Fix layout and
	port to Qt4. This file produces no warnings now and uses no
	q3support classes.

	More Q3Support -> Qt4 conversions.
	* dialogs/KCConfigSubtypeBarPage.cc (KCConfigSubtypeBarPage): Fix
	layout, and port to Qt4. This file produces no warnings now and
	uses no q3support classes.
	
	Do some more conversion Q3Support -> Qt4
	* dialogs/KCConfigBackgroundPage.cc (KCConfigBackgroundPage):
	Don't call deprecated constructor for parent.
	(KCConfigBackgroundPage): Convert from Q3GroupBox to QGroupBox and
	fix layout.
	* dialogs/KCConfigLegendPage.cc (KCConfigLegendPage): GridLayouts
	have coordinates, but VBoxLayouts don't.
	
	Remove some warnings for qgridlayout, and port to qgroupbox
	* dialogs/KCWizardCharttype.cc (constructor): Fix call to QGridLayout
	* dialogs/KCConfigLegendPage.cc (constructor): Fix part of the
	layout handling
	
	Remove some warnings for qwidget:
	* kchart_view.cc (KChartView): Don't call setBackgroundMode()
	* dialogs/KCConfigBackgroundPage.cc (init): Warn about background
	images not working.
	
2007-03-17  Inge Wallin  <inge@lysator.liu.se>
	
	Remove warnings for qpixmap:
	* kchart_part.cc
	* dialogs/KCConfigBackgroundPage.cc
	Replace deprecated calls.
	
	Remove warnings for qcombobox, qstringlist:
	* dialogs/KCConfigBackgroundPage.cc
	Replace deprecated calls.
	
	Remove warnings for qfont, qabstractbutton, qobject:
	* kchart_params.cc
	* dialogs/KCWizardCharttype.cc
	* dialogs/KCConfigLegendPage.cc
	* kchartDataEditor.cc
	Replace deprecated calls.
	